--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-
-        <h1>Progress Steps</h1>
+        <div>
+            <h1 class="title">Progress Steps</h1>
+        </div>
 
         <div class="progress-container">
 
